// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`VSelect.js should render buttons correctly when using items array with segmented prop 1`] = `

<div tabindex="0"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select input-group--segmented input-group--single-line"
=======
exports[`VSelect.js should have -1 tabindex when disabled 1`] = `

<div tabindex="-1"
     class="input-group input-group--disabled input-group--append-icon input-group--text-field input-group--select input-group--autocomplete"
>>>>>>> dev
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
<<<<<<< HEAD
      <button type="button"
              class="btn btn--flat"
      >
        <div class="btn__content">
          Hello
        </div>
      </button>
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content  menu__content--dropdown"
           style="max-height: 300px; min-width: 55px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
=======
      <input disabled="disabled"
             tabindex="-1"
             role="combobox"
             class="input-group--select__autocomplete"
      >
    </div>
    <div class="menu menu--disabled"
         style="display: inline-block;"
    >
      <div class="menu__content menu__content--select"
           style="max-height: 300px; min-width: 24px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
>>>>>>> dev
      >
        <div class="card"
             style="height: auto;"
        >
<<<<<<< HEAD
          <ul data-uid="53"
              class="list"
          >
            <li>
              <div href="javascript:;"
                   class="list__tile list__tile--link list__tile--active"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    Hello
=======
          <ul data-uid="26"
              class="list"
          >
            <li disabled="disabled">
              <div disabled="disabled"
                   href="javascript:;"
                   class="list__tile list__tile--link list__tile--disabled"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    No data available
>>>>>>> dev
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
<<<<<<< HEAD
    <i class="material-icons icon input-group__append-icon">
=======
    <i aria-hidden="true"
       class="material-icons icon input-group__append-icon"
    >
>>>>>>> dev
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>

`;

<<<<<<< HEAD
exports[`VSelect.js should render buttons correctly when using slot with segmented prop 1`] = `

<div tabindex="0"
     class="input-group input-group--dirty input-group--append-icon input-group--text-field input-group--select input-group--segmented input-group--single-line"
>
  <div class="input-group__input">
    <div class="input-group__selections"
         style="overflow: hidden;"
    >
      <div>
        Hello
      </div>
    </div>
    <div class="menu"
         style="display: inline-block;"
    >
      <div class="menu__content  menu__content--dropdown"
           style="max-height: 300px; min-width: 55px; max-width: NaNpx; top: 12px; left: 0px; z-index: 6; display: none;"
      >
        <div class="card"
             style="height: auto;"
        >
          <ul data-uid="62"
              class="list"
          >
            <li>
              <div href="javascript:;"
                   class="list__tile list__tile--link list__tile--active"
              >
                <div class="list__tile__content">
                  <div class="list__tile__title">
                    Hello
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <i class="material-icons icon input-group__append-icon">
      arrow_drop_down
    </i>
  </div>
  <div class="input-group__details">
    <div class="input-group__messages">
    </div>
  </div>
</div>
=======
exports[`VSelect.js should not display when not autocomplete with placeholder and dirty 1`] = `

<input disabled="disabled"
       tabindex="-1"
       class="input-group--select__autocomplete"
       placeholder="Placeholder"
       style="display: none;"
>

`;

exports[`VSelect.js should render a disabled input with placeholder 1`] = `

<input disabled="disabled"
       tabindex="-1"
       class="input-group--select__autocomplete"
       placeholder="Placeholder"
>
>>>>>>> dev

`;
